--- a/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/PlayerViewTableViewCell.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/PlayerViewTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -14,16 +14,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ERN-WV-QzB" userLabel="Player View">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="319"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ERN-WV-QzB" userLabel="Player View">
+                        <rect key="frame" x="5" y="5" width="310" height="309"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ERN-WV-QzB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Zbw-he-KKc"/>
-                    <constraint firstAttribute="trailing" secondItem="ERN-WV-QzB" secondAttribute="trailing" id="aMp-g1-Ncc"/>
-                    <constraint firstAttribute="bottom" secondItem="ERN-WV-QzB" secondAttribute="bottom" id="jsP-jY-oGb"/>
-                    <constraint firstItem="ERN-WV-QzB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="p3u-Bp-7fX"/>
+                    <constraint firstItem="ERN-WV-QzB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Zbw-he-KKc"/>
+                    <constraint firstAttribute="trailing" secondItem="ERN-WV-QzB" secondAttribute="trailing" constant="5" id="aMp-g1-Ncc"/>
+                    <constraint firstAttribute="bottom" secondItem="ERN-WV-QzB" secondAttribute="bottom" constant="5" id="jsP-jY-oGb"/>
+                    <constraint firstItem="ERN-WV-QzB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="p3u-Bp-7fX"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
