--- a/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/MessagePicturePreviewView.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/MessagePicturePreviewView.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hcC-fT-oCS">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_plus" translatesAutoresizingMaskIntoConstraints="NO" id="hcC-fT-oCS">
                     <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRg-kR-fdD">
@@ -44,4 +44,7 @@
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="icon_plus" width="64" height="64"/>
+    </resources>
 </document>
