--- a/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/UpvoteMessageTableViewCell.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/UpvoteMessageTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="UpvoteMessageTableViewCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="UpvoteMessageTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,21 +17,21 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7MV-Eh-cqB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DF5-sv-RZH" userLabel="Header View">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DF5-sv-RZH" userLabel="Header View">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="19"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UPVOTES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q19-8Q-Bx7">
-                                        <rect key="frame" x="20" y="0.0" width="70" height="19"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Up Votes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q19-8Q-Bx7">
+                                        <rect key="frame" x="15" y="0.0" width="70" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="K8u-LK-gfw"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5af-Ec-Ht7">
-                                        <rect key="frame" x="95" y="0.0" width="205" height="19"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                        <rect key="frame" x="90" y="0.0" width="210" height="19"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -40,7 +40,7 @@
                                 <constraints>
                                     <constraint firstItem="5af-Ec-Ht7" firstAttribute="top" secondItem="DF5-sv-RZH" secondAttribute="top" id="EmN-84-K9p"/>
                                     <constraint firstAttribute="trailing" secondItem="5af-Ec-Ht7" secondAttribute="trailing" constant="20" id="NIx-zv-6CO"/>
-                                    <constraint firstItem="q19-8Q-Bx7" firstAttribute="leading" secondItem="DF5-sv-RZH" secondAttribute="leading" constant="20" id="aLN-fE-zku"/>
+                                    <constraint firstItem="q19-8Q-Bx7" firstAttribute="leading" secondItem="DF5-sv-RZH" secondAttribute="leading" constant="15" id="aLN-fE-zku"/>
                                     <constraint firstItem="q19-8Q-Bx7" firstAttribute="top" secondItem="DF5-sv-RZH" secondAttribute="top" id="d1V-kt-dfP"/>
                                     <constraint firstAttribute="height" constant="19" id="g8H-Xd-cxU"/>
                                     <constraint firstAttribute="bottom" secondItem="5af-Ec-Ht7" secondAttribute="bottom" id="h17-I7-Zmi"/>
@@ -48,14 +48,16 @@
                                     <constraint firstAttribute="bottom" secondItem="q19-8Q-Bx7" secondAttribute="bottom" id="xff-bb-FGi"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5p2-yx-Hsd">
+                            <scrollView autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5p2-yx-Hsd">
                                 <rect key="frame" x="0.0" y="19" width="320" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="gRc-ue-FmU"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="5p2-yx-Hsd" secondAttribute="bottom" id="1g2-uZ-2GF"/>
                             <constraint firstItem="DF5-sv-RZH" firstAttribute="leading" secondItem="7MV-Eh-cqB" secondAttribute="leading" id="3Kv-bs-gS2"/>
                             <constraint firstItem="5p2-yx-Hsd" firstAttribute="leading" secondItem="7MV-Eh-cqB" secondAttribute="leading" id="EQx-ZM-ya2"/>
                             <constraint firstAttribute="trailing" secondItem="DF5-sv-RZH" secondAttribute="trailing" id="Pnv-Lp-pjn"/>
