--- a/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/MessageAudioTableViewCell.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/MessageAudioTableViewCell.xib
@@ -137,7 +137,7 @@
                                     <constraint firstAttribute="width" constant="26" id="dgw-UX-51o"/>
                                     <constraint firstAttribute="height" constant="26" id="fzD-Wv-1Mq"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="btn_mix_play">
+                                <state key="normal" backgroundImage="icon_mix_pause">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -232,7 +232,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="btn_mix_play" width="23" height="23"/>
         <image name="icon_circle_gray" width="90" height="90"/>
+        <image name="icon_mix_pause" width="23" height="23"/>
     </resources>
 </document>
