update label title upvote

--- a/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/UpvoteMessageTableViewCell.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/MessageDetails/UpvoteMessageTableViewCell.xib
@@ -20,17 +20,17 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DF5-sv-RZH" userLabel="Header View">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="19"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Up Votes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q19-8Q-Bx7">
-                                        <rect key="frame" x="15" y="0.0" width="70" height="19"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q19-8Q-Bx7">
+                                        <rect key="frame" x="15" y="0.0" width="40" height="19"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="70" id="K8u-LK-gfw"/>
+                                            <constraint firstAttribute="width" constant="40" id="K8u-LK-gfw"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5af-Ec-Ht7">
-                                        <rect key="frame" x="90" y="0.0" width="210" height="19"/>
+                                        <rect key="frame" x="60" y="0.0" width="240" height="19"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
