--- a/9HugMoment/9HugMoment/Base.lproj/Trending.storyboard
+++ b/9HugMoment/9HugMoment/Base.lproj/Trending.storyboard
@@ -143,7 +143,7 @@
         <!--Capture Video View Controller-->
         <scene sceneID="SRt-So-jGr">
             <objects>
-                <viewController wantsFullScreenLayout="YES" hidesBottomBarWhenPushed="YES" id="Sez-qI-75R" customClass="CaptureVideoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="captureVideoTrending" wantsFullScreenLayout="YES" hidesBottomBarWhenPushed="YES" id="Sez-qI-75R" customClass="CaptureVideoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="f19-Dh-fKo"/>
                         <viewControllerLayoutGuide type="bottom" id="QqY-lv-75g"/>
@@ -252,7 +252,7 @@
                                             <constraint firstAttribute="height" constant="37" id="4ep-dk-Mk0"/>
                                             <constraint firstAttribute="width" constant="37" id="8PS-bf-eRR"/>
                                         </constraints>
-                                        <state key="normal" image="camera" backgroundImage="5631F680-2152-47AC-8CC2-0E55D87827F0">
+                                        <state key="normal" image="camera" backgroundImage="7C7D86FE-DCF9-4EC8-A16E-EB23B55F4567">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -1133,7 +1133,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="5631F680-2152-47AC-8CC2-0E55D87827F0" width="37" height="37">
+        <image name="5_floral_on_the_right" width="320" height="320"/>
+        <image name="7C7D86FE-DCF9-4EC8-A16E-EB23B55F4567" width="37" height="37">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -1275,7 +1276,6 @@ wx7MHt8e4x72HwEfCh8PHxcfGh8fHy4fMh85H0EfTh9TH1UfVx9cH2QfZx9sH3Qfdx+JH4wfkQAAAAAA
 AAIBAAAAAAAAAEIAAAAAAAAAAAAAAAAAAB+TA
 </mutableData>
         </image>
-        <image name="5_floral_on_the_right" width="320" height="320"/>
         <image name="9hug_logo" width="250" height="250"/>
         <image name="btn_add_music" width="27" height="27"/>
         <image name="btn_add_music_hover_bordeaux" width="27" height="27"/>
